--- a/html/css/wc.css
+++ b/html/css/wc.css
@@ -1,99 +1,9 @@
-body {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  color: #666;
-  font-family: Century Gothic, 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
-  line-height: 1.6em;
-  background: url(../image/back.jpg) no-repeat right top #ede8ea;
-}
-
-/* div { */
-  /* color: #666666; */
-  /* width: 80%; */
-  /* margin-top: 20px; */
-  /* margin-right: auto; */
-  /* margin-left: auto; */
-/* } */
-
-#title{
-	width: 80%;  
-  max-width: 900px;  
-  margin: auto;  
-  padding: 30px; 
-}
-
-
-#container {
-  width: 80%;  
-  max-width: 850px;  
-  margin: auto;  
-  padding: 30px;  
-  background: #EEFFFF;
-}
-
-span {}
-
-
-
-h1 {
-  color: #0000FF;
-  font-size: 30px;
-  width: 70%;
-  margin-top: 20px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-h2 {
-  color: #EFFBFB;
-  font-size: 20px;
-}
-
-h3 {
-  color: #EFFBFB;
-  font-size: 20px;
-  width: 70%;
-  margin-top: 20px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-table#smp1 {
-  width: 100%;
-  margin: 2em 0;
-  border-top: 1px solid #ccc;
-  /*table要素の「上」ボーダー*/
-  border-left: 1px solid #ccc;
-  /*table要素の「左」ボーダー*/
-  border-spacing: 0;
-  /*セル同士の間隔*/
-  text-align: center
-}
-
-table#smp1 tr th, table#smp1 tr td {
-  /*「,」で区切って複数のセレクタを指定しています*/
-  border-bottom: 1px solid #ccc;
-  /*セルの「下」ボーダー*/
-  border-right: 1px solid #ccc;
-  /*セルの「右」ボーダー*/
-  padding: 0.5em;
-  /*セルのボーダーとテキストの間をあけて読みやすく*/
-}
-
-table#smp1 tr th {
-  background: #e6eaff;
-  /*th（見出し）だけ背景色を付けてます*/
-}
-
-
 .container {
     width: auto;
     height: auto;
     position:relative;
 	margin-right: auto;
 }
-
 /* 
 部屋の状況を示すインジケータ
  */
@@ -145,37 +55,23 @@ table#smp1 tr th {
 	background-color: #92AD40;
 }
 
-/* フッターの設定 */
-
-#footer {
-    position: left;
-    font-family: Century Gothic, 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
-    bottom: 0;
-    height: 100px;
-    color : #000;
-    font-size:1.0em;
-    text-align : left;
-	width: 80%;  
-	max-width: 900px;  
-	margin: 20px;   
-}
+/* フッターナビバーの設定 */
 
 #nav {
   list-style: none;
   overflow: hidden;
+  height:80px;
 }
 
 #nav li {
   width: auto;
   text-align: center;
   float: left;
-  height: 50px;
-  line-height: 50px;
-  margin-right: 2px;
 }
 
 #nav li a {
   text-decoration: none;
   font-weight: bold;
-  padding: 20px;
+  padding: 10px;
+
 }
